<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of inventory -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/image"
            android:src="@drawable/imagenotfound"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier"
                android:padding="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="5dp"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textColor="#000000"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantitySymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantitySymbol"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceSymbol"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:padding="5dp"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <Button
        android:id="@+id/saleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:focusable="false"
        android:text="@string/sale"/>

</LinearLayout>